Improve implementation of UI jump-prevention

--- a/assets/sass/patterns/atoms/speech-bubble.scss
+++ b/assets/sass/patterns/atoms/speech-bubble.scss
@@ -45,10 +45,10 @@
 
   }
 
-  & [data-visible-annotation-count] {
-    display: inline-block;
-  }
+}
 
+.speech-bubble__inner {
+  display: inline-block;
 }
 
 .speech-bubble--inline {
